src/objects/Product_Qualification_Team_Role__c.object
<CustomObject>
    <description>R4 - Product Qualification Team Roles</description>
    <fields>
        <fullName>Access__c</fullName>
        <description>R4 - Access</description>
        <label>Access</label>
        <picklist>
            <picklistValues>
                <fullName>Read/Write</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Qualification_OwnerId__c</fullName>
        <formula>CASESAFEID(Product_Qualification__r.OwnerId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Qualification OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Qualification__c</fullName>
        <description>R4 - Product_Qualification</description>
        <label>Product Qualification</label>
        <referenceTo>Product_Qualification__c</referenceTo>
        <relationshipName>Product_Qualification_Team_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Qualification_Status__c</fullName>
        <formula>IF ( OR (ISPICKVAL(Product_Qualification__r.Initiative_Status__c, &apos;Closed Qualified&apos;), ISPICKVAL(Product_Qualification__r.Initiative_Status__c, &apos;Closed Not Qualified&apos;)), &apos;Closed&apos;, TEXT(Product_Qualification__r.Initiative_Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Qualification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <description>R4 - Team Role</description>
        <label>Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Initiative Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Factory Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Factory Product Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R4 - User</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Qualification_Team_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Qualification Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRD-QUALIF-TEAMROLE-{0000}</displayFormat>
        <label>Product Qualification Team Role</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Qualification Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Record_Lock_Check</fullName>
        <active>true</active>
        <description>R4 Record Lock Check based on Initiative Status value</description>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;, IF(OR(ISPICKVAL(Product_Qualification__r.Initiative_Status__c, &quot;Closed Qualified&quot;),ISPICKVAL(Product_Qualification__r.Initiative_Status__c,&quot;Closed Not Qualified&quot;)) ,true, false))</errorConditionFormula>
        <errorMessage>You cannot save the changes as Product Qualification Status is Closed.</errorMessage>
    </validationRules>
</CustomObject>